tests/baselines/reference/importTypeTag4.errors.txt
/foo.js(2,18): error TS2300: Duplicate identifier 'Foo'.
/foo.js(6,18): error TS2300: Duplicate identifier 'Foo'.


==== /types.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
    
==== /foo.js (2 errors) ====
    /**
     * @importType { Foo } from "./types"
                     ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
     */
    
    /**
     * @importType { Foo } from "./types"
                     ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
     */
    
    /**
     * @param { Foo } foo
     */
    function f(foo) {}
    